--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@ include:
   - CPP.md
   - SAA.md
   - OCIFA.md
-remote_theme: "dracula/gh-pages"
+
+#remote_theme: "dracula/gh-pages"
 
 theme: jekyll-theme-midnight
