--- a/package.json
+++ b/package.json
@@ -8,29 +8,30 @@
     "url": "https://github.com/W3Layouts/gatsby-starter-delog/issues"
   },
   "dependencies": {
-    "gatsby": "^2.21.0",
-    "gatsby-plugin-dark-mode": "^1.1.1",
-    "gatsby-plugin-google-analytics": "^2.1.36",
-    "gatsby-plugin-manifest": "^2.4.1",
-    "gatsby-plugin-netlify-cms": "^4.1.38",
-    "gatsby-plugin-offline": "^3.2.0",
-    "gatsby-plugin-react-helmet": "^3.1.22",
-    "gatsby-plugin-sass": "^2.1.28",
-    "gatsby-plugin-sitemap": "^2.4.0",
-    "gatsby-remark-emojis": "^0.4.2",
-    "gatsby-remark-prismjs": "^3.3.31",
-    "gatsby-source-filesystem": "^2.1.48",
-    "gatsby-transformer-remark": "^2.6.53",
-    "netlify-cms-app": "^2.11.13",
-    "node-sass": "^4.14.1",
-    "prismjs": "^1.19.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-helmet": "^5.2.1",
-    "react-icons": "^4.2.0"
+    "gatsby": "^5.4.2",
+    "gatsby-plugin-dark-mode": "^1.1.2",
+    "gatsby-plugin-google-analytics": "^5.4.0",
+    "gatsby-plugin-manifest": "^5.4.0",
+    "gatsby-plugin-netlify-cms": "^7.4.0",
+    "gatsby-plugin-offline": "^6.4.0",
+    "gatsby-plugin-react-helmet": "^6.4.0",
+    "gatsby-plugin-sass": "^6.4.0",
+    "gatsby-plugin-sitemap": "^6.4.0",
+    "gatsby-remark-emojis": "^0.4.3",
+    "gatsby-remark-prismjs": "^7.4.0",
+    "gatsby-source-filesystem": "^5.4.0",
+    "gatsby-transformer-remark": "^6.4.0",
+    "netlify-cms-app": "^2.15.72",
+    "node-sass": "^8.0.0",
+    "prismjs": "^1.29.0",
+    "react": "^18.2.0",
+    "react-adsense": "^0.1.0",
+    "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
+    "react-icons": "^4.7.1"
   },
   "devDependencies": {
-    "prettier": "^1.19.1"
+    "prettier": "^2.8.3"
   },
   "homepage": "https://github.com/W3Layouts/gatsby-starter-delog#readme",
   "keywords": [
